...
    }
    
    public override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
    
        if showAddCell && indexPath.row == dataSource!.count {
            let cell = UITableViewCell(style: .default, reuseIdentifier: "additionCell")
            cell.textLabel?.text = "Add New"
            cell.imageView?.image = UIImage(named: "Plus")
          //  cell.backgroundColor = UIColor.white
            
            if tableView.isEditing {
                cell.showsReorderControl = true
            }
...
